hphp/hack/test/typecheck/lambda/variadics/arities02.php.like_types.exp
File "arities02.php", line 22, characters 13-73:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 28, characters 13-47:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 33, characters 13-70:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 39, characters 14-78:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 40, characters 17-19:
You are trying to access the member bar but this is not an object, it is a string (Typing[4062])
File "arities02.php", line 39, characters 29-30:
Definition is here
File "arities02.php", line 45, characters 13-48:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 45, characters 13-48:
Invalid argument (Typing[4110])
File "arities02.php", line 3, characters 20-63:
Expected ~(function(int, string, string, int...): int) because it is an unenforceable type
File "arities02.php", line 45, characters 13-48:
But got (function($a, $b, $c): int)
File "arities02.php", line 50, characters 13-52:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "arities02.php", line 50, characters 13-52:
Invalid argument (Typing[4110])
File "arities02.php", line 3, characters 20-63:
Expected ~(function(int, string, string, int...): int) because it is an unenforceable type
File "arities02.php", line 50, characters 13-52:
But got (function($a, $b, $c, $d): int)
